<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/roadwork"
        android:icon="@drawable/rwicon"
        android:enabled="true"
        android:title="@string/button_roadWorks" />

    <item android:id="@+id/Jplanner"
        android:icon="@drawable/jplannericon"
        android:enabled="true"
        android:title="@string/button_journeyPlanner" />

    <item android:id="@+id/home"
        android:icon="@drawable/homeicon"
        android:enabled="true"
        android:title="@string/home" />

    <item android:id="@+id/Incidents"
        android:icon="@drawable/icindenticon"
        android:enabled="true"
        android:title="@string/button_roadIncidents" />

    <item android:id="@+id/search"
        android:icon="@drawable/search"
        android:enabled="true"
        android:title="@string/button_search" />
</menu>