<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.cardview.widget.CardView
        android:layout_width="360dp"
        android:layout_height="130dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp">

        <ImageView
            android:id="@+id/roadworkIcon"
            android:layout_width="30dp"
            android:focusable="false"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:contentDescription="TODO"
            android:src="@drawable/roadworksicon"/>

        <TextView
            android:id="@+id/roadworkName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:letterSpacing="0.1"
            android:text="@string/RoadworkItem"
            android:textColor="@color/darkGreen"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/road"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="280dp"
            android:layout_marginTop="5dp"
            android:drawablePadding="2dp"
            android:letterSpacing="0.05"
            android:text="@string/RoadNumber"
            android:textSize="18sp"
            android:textAlignment="textStart"
            android:textStyle="bold" />
        <ImageView
            android:id="@+id/status"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:focusable="false"
            android:src="@drawable/currentrw"
            android:layout_marginStart="329dp"
            android:layout_marginTop="12dp" />

        <TextView
            android:id="@+id/location"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="46dp"
            android:letterSpacing="0.05"
            android:text="@string/RwLocation"
            android:textColor="@color/blueGrey"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="95dp"
            android:letterSpacing="0.05"
            android:text="@string/RwPeriod"
            android:textColor="@color/blueGrey"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="360dp"
            android:layout_height="5dp"
            android:focusable="false"
            android:layout_marginTop="125dp"
            android:background="@color/darkGreen"
            android:src="#6D9773"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    </androidx.cardview.widget.CardView>
</LinearLayout>