<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Roadworks">
    <RelativeLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/whiteGrey"
        android:fontFamily="@font/sen"
        android:orientation="vertical"
        tools:ignore="MissingConstraints" >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:drawablePadding="10dp"
            android:letterSpacing="0.1"
            android:paddingTop="25dp"
            android:text="@string/Roadwork_Title"
            android:textAlignment="center"
            android:textColor="@color/darkGreen"
            android:textSize="25sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/titleicon1" />

<!--        <ImageView-->
<!--            android:layout_width="35dp"-->
<!--            android:layout_height="25dp"-->
<!--            android:layout_marginStart="370dp"-->
<!--            android:layout_marginTop="25dp"-->
<!--            android:src="@drawable/map1"-->
<!--            tools:ignore="ContentDescription,ImageContrastCheck" />-->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp">

            <EditText
                android:id="@id/search_bar"
                android:layout_width="290dp"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:autofillHints=""
                android:background="@drawable/searchbar"
                android:hint="@string/search_on_a_specific_road"
                android:inputType="text"
                android:labelFor="@+id/filterDropdown"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColorHint="#757575"
                android:textSize="15sp"
                tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />
            <ImageButton
                android:id="@+id/search_button"
                android:onClick="searchByRoad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/searchbutton"
                android:layout_marginStart="7dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/status_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="130dp"
            android:layout_marginEnd="10dp"
            android:gravity="center_horizontal|top"
            android:letterSpacing="0.15"
            android:text="@string/period"
            android:textColor="@color/blueGrey"
            android:textSize="15sp"
            tools:ignore="TextContrastCheck" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="155dp"
            android:orientation="horizontal"
            android:layout_marginStart="20dp">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="17dp"
                android:onClick="futureRoadW"
                android:background="@drawable/futurerw2"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
                android:contentDescription="TODO" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="17dp"
                android:onClick="currentRW"
                android:background="@drawable/currentrw2"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
                android:contentDescription="TODO" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="pastRW"
                android:background="@drawable/pastrw2"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        </LinearLayout>

        <ListView
            android:id="@+id/roadworklist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="190dp"
            android:divider="@null"
            android:dividerHeight="0dp"
            />



        <ImageButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:src="@drawable/back"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />





    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>